[gd_scene load_steps=2 format=3 uid="uid://3x5mk8srema3"]

[ext_resource type="Script" path="res://nodes/scripts/pause_menu.gd" id="1_klwgo"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klwgo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.491
anchor_top = 0.5
anchor_right = 0.491
anchor_bottom = 0.5
offset_left = -83.24
offset_top = -50.0
offset_right = -0.240021
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
color = Color(1, 0.628979, 0.0941085, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -29.0
offset_right = 35.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Pasued"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Resume"

[node name="Control" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Help"

[node name="Save&Quit" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Save & Quit"

[connection signal="pressed" from="GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GridContainer/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="GridContainer/Save&Quit" to="." method="_on_save_quit_pressed"]
